Set index to fix overlapping labels

--- a/app/styles/_horizontal.scss
+++ b/app/styles/_horizontal.scss
@@ -6,6 +6,7 @@
 
   .value {
     position: relative;
+    z-index: 1;
     @include box-sizing(border-box);
     @include transition(width 400ms ease-out);
 
